Version 7.4.4
- Added some missing libc.a files (thanks to Ada)

Version 7.4.3
- Remove some unused debug strings when debugging is not enabled
- Use stack allocation for passing struct arguments

Version 7.4.2
- Added missing __builtin_frac keyword for C

Version 7.4.1
- Made `@@@func` return the address of the first instruction of the
function func, in both Spin2 and C.
- Fixed an internal error computing offsets in structures stored in registers

Version 7.4.0
- Fixed some errors in C __pasm parsing
- Fixed compile time calculations of QLOG and QEXP (thanks to Ada)
- Fixed many incorrect address calculations for Spin2 ^x variables
- Fixed parsing of large immediate addresses for inline asm call/jmp
- Fixed a long standing bug in loop reduction
- Improved some nucode peephole optimizations
- Some longfill optimizations and bug fixes (thanks to Ada)

Version 7.3.0
- Allow `__attribute__((packed))` on C structs
- Add `-Wbuiltin-fallback` for warning when builtin functions must call libraries
- Make Spin2 structs actually packed
- Fix parsing of `[++]` and `[--]` as pre operators
- Fixed error reporting around __builtin_printf
- Fixed callpa #x, ##longx (keep 20 bits for addresses, not 18)
- Fixed error reporting for P2_DST_CONST_OK instructions
- Fixed passing of structs containing non-long-sized items
- Implemented `%interface` for Spin2
- Updated __builtin_printf to handle %X

Version 7.2.1
- Use _rxpin as repository to hold frequency for gbrk debug
- Fixed "short unsigned" declarations in C

Version 7.2.0
- Add _[n] syntax for skipping assignments in Spin2
- Added TASKHLT pseudo-variable
- Fixed usage of sub-objects in Spin2
- Fixed compilation of Spin1 files containing a `_` constant (thanks, Ada!)
- Fixed a long standing memory evaluation order bug

Version 7.1.2
- Fix namespace usage during initial address assignment (so labels in namespaces work in ORG/RES/FIT etc.)
- Fix some issues around array address calculations in Spin2